@@ -6259,3 +6259,6 @@ PACKAGE: 2.2.99.2
 
 2007-02-19 cjg
  * Editorial restrictions now in dataset "eprint" rather than "buffer".
+
+2007-02-19 cjg
+ * It is now possible to search for a null date using "","EX"
